--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
-    <section></section>
+    <section>
     <div class="layer">
       <h2>Dinas Pendidikan dan Kebudayaan <br />Provinsi Kalimantan Selatan</h2>
       <h1>Museum <br />Wasaka</h1>
     </div>
-    
+  </section>
     <section class="section2">
       <h1>Pameran Koleksi</h1>
       <div class="wrapper">
